--- a/app/src/main/res/values-cn/strings.xml
+++ b/app/src/main/res/values-cn/strings.xml
@@ -55,17 +55,17 @@
 
     <string name="title_activity_export_db">导出数据</string>
     <string name="export_db">将数据导出为 CSV 文件</string>
-    <string name="export_db_label">单击该按钮将数据导出为 CSV 文件。它将被保存为 \'export_movies.csv\' 和 \'export_series.csv\' ，位置在存储根目录。如有需要，你可以导入此备份。</string>
+    <string name="export_db_label">单击该按钮将数据导出为 CSV 文件。它将被保存为 \'export_movies.csv\', \'export_series.csv\', \'export_wishlist_movies.csv\' 和 \'export_wishlist_series.csv\' ，位置在存储根目录。如有需要，你可以导入此备份。</string>
     <string name="action_export">导出</string>
     <string name="export_start_toast">开始导出......</string>
-    <string name="export_succeeded_toast">...... 导出成功。详见存储根目录中的 export_movies.csv 和 export_series.csv 文件。</string>
+    <string name="export_succeeded_toast">...... 导出成功。详见存储根目录中的 export_movies.csv, export_series.csv, export_wishlist_movies.csv 和 export_wishlist_series.csv 文件。</string>
     <string name="export_io_error_toast">导出期间发生一个 I/O 错误。请验证你的权限。</string>
     <string name="export_permission_error_toast">无法导出数据，因 CineLog 未被允许写入外部存储。</string>
 
     <string name="action_import">导入</string>
     <string name="title_activity_import_db">CSV 文件导入</string>
     <string name="import_db">导入数据库中的 CSV 文件</string>
-    <string name="import_db_label">将导入存储根目录下 import_movies.csv 文件内的电影数据和 import_series.csv 文件内的连续剧数据。</string>
+    <string name="import_db_label">将导入存储根目录下 import_movies.csv 和 import_wishlist_movies.csv 文件内的电影数据和 import_series.csv 和 import_wishlist_series.csv 文件内的连续剧数据。</string>
     <string name="import_permission_error_toast">无法导入，因 CineLog 未被允许读取外部存储。</string>
     <string name="import_error_toast">导入 %s 文件的数据期间出错</string>
     <string name="import_io_error_toast">试图查找 %s 文件时出错。请验证该文件位于存储根目录且你有所需的权限。</string>
