--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -55,17 +55,17 @@
 
     <string name="title_activity_export_db">Gegevens exporteren</string>
     <string name="export_db">Exporteren als CSV</string>
-    <string name="export_db_label">Druk op de knop om je gegevens te exporteren naar een CSV-bestand. Het wordt opgeslagen als \'export_movies.csv\' en \'export_series.csv\' in de hoofdopslagmap. Indien nodig kun je deze back-up weer importeren.</string>
+    <string name="export_db_label">Druk op de knop om je gegevens te exporteren naar een CSV-bestand. Het wordt opgeslagen als \'export_movies.csv\', \'export_series.csv\', \'export_wishlist_movies.csv\' en \'export_wishlist_series.csv\' in de hoofdopslagmap. Indien nodig kun je deze back-up weer importeren.</string>
     <string name="action_export">Exporteren</string>
     <string name="export_start_toast">Bezig met voorbereiden…</string>
-    <string name="export_succeeded_toast">Exporteren voltooid. Zie export_movies.csv en export_series.csv in de hoofdopslagmap.</string>
+    <string name="export_succeeded_toast">Exporteren voltooid. Zie export_movies.csv, export_series.csv, export_wishlist_movies.csv en export_wishlist_series.csv in de hoofdopslagmap.</string>
     <string name="export_io_error_toast">Er is een i/o-fout opgetreden tijdens het exporteren. Controleer de machtigingen.</string>
     <string name="export_permission_error_toast">Het exporteren naar de externe opslag is mislukt omdat CineLog hiertoe niet gemachtigd is.</string>
 
     <string name="action_import">Importeren</string>
     <string name="title_activity_import_db">CSV-bestand importeren</string>
     <string name="import_db">CSV-bestand importeren naar databank</string>
-    <string name="import_db_label">Het importproces importeert films uit import_movies.csv en series uit import_series.csv file uit de hoofdopslagmap.</string>
+    <string name="import_db_label">Het importproces importeert films uit import_movies.csv en import_wishlist_movies.csv en series uit import_series.csv en import_wishlist_series.csv file uit de hoofdopslagmap.</string>
     <string name="import_permission_error_toast">Het importeren van de externe opslag is mislukt omdat CineLog hiertoe niet gemachtigd is.</string>
     <string name="import_error_toast">Er is een fout opgetreden tijdens het importeren van \'%s\'.</string>
     <string name="import_io_error_toast">Er is een fout opgetreden tijdens het lokaliseren van \'%s\'. Ga na of het bestand aanwezig is in de hoofdopslagmap en of je de juiste machtigingen hebt verleend.</string>
