--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -141,4 +141,6 @@
     <string name="serie_episode_delete_hint">Appuyez longuement pour supprimer le visionnage</string>
     <string name="default_movie_sort_type_title">Ordre de la liste des films</string>
     <string name="default_serie_sort_type_title">Order de la liste des séries</string>
+    <string name="nav_tags_space">Tags</string>
+    <string name="tags_title">Tags</string>
 </resources>
