--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -144,4 +144,6 @@
     <string name="serie_episode_delete_hint">Houd lang ingedrukt om kijkinformatie te wissen</string>
     <string name="default_movie_sort_type_title">Movie review sort</string>
     <string name="default_serie_sort_type_title">Serie review sort</string>
+    <string name="nav_tags_space">Tags</string>
+    <string name="tags_title">Tags</string>
 </resources>
