--- a/app/src/main/res/values-cn/strings.xml
+++ b/app/src/main/res/values-cn/strings.xml
@@ -78,7 +78,7 @@
 
     <string name="title_activity_settings">设置</string>
     <string name="default_tmdb_language_title">TmDb 数据语言</string>
-    <string name="default_movie_sort_type_title">影评排序</string>
+	<string name="default_movie_sort_type_title">影评排序</string>
     <string name="default_serie_sort_type_title">剧评排序</string>
     <string name="default_maximum_rating">影评数上限</string>
     <string name="default_maximum_rating_summary">输入你想要为新电影设置的默认的影评最多数目</string>
@@ -144,6 +144,6 @@
     <string name="title_fragment_serie_general">一般</string>
     <string name="title_fragment_serie_episodes">集</string>
     <string name="serie_episode_delete_hint">请长按删除观看资料</string>
-    <string name="nav_tags_space">Tags</string>
-    <string name="tags_title">Tags</string>
+    <string name="nav_tags_space">标签</string>
+    <string name="tags_title">标签</string>
 </resources>
