--- a/app/src/main/res/values-cn/strings.xml
+++ b/app/src/main/res/values-cn/strings.xml
@@ -78,7 +78,7 @@
 
     <string name="title_activity_settings">设置</string>
     <string name="default_tmdb_language_title">TmDb 数据语言</string>
-    <string name="default_movie_sort_type_title">影评排序</string>
+	<string name="default_movie_sort_type_title">影评排序</string>
     <string name="default_serie_sort_type_title">剧评排序</string>
     <string name="default_maximum_rating">影评数上限</string>
     <string name="default_maximum_rating_summary">输入你想要为新电影设置的默认的影评最多数目</string>
@@ -146,4 +146,9 @@
     <string name="serie_episode_delete_hint">请长按删除观看资料</string>
     <string name="nav_tags_space">标签</string>
     <string name="tags_title">标签</string>
+    <string name="tag_color">颜色</string>
+    <string name="tag_name">标签名称</string>
+    <string name="tag_films">激活电影标签</string>
+    <string name="tag_series">激活电视剧标签</string>
+    <string name="view_kino_review_tags_label_value">标签</string>
 </resources>
