--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="tag_films">Activer pour les films</string>
     <string name="tag_series">Activer pour les séries</string>
     <string name="view_kino_review_tags_label_value">Tags</string>
+    <string name="review_edit_tags">Éditer les tags</string>
 </resources>
