--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,11 +146,12 @@
     <string name="serie_episode_delete_hint">Please long click to remove watching data</string>
     <string name="nav_tags_space">Tags</string>
     <string name="tags_title">Tags</string>
-    <string name="tag_color">Couleur</string>
-    <string name="tag_name">Nom du tag</string>
-    <string name="tag_films">Activer pour les films</string>
-    <string name="tag_series">Activer pour les séries</string>
+    <string name="tag_color">Color</string>
+    <string name="tag_name">Tag name</string>
+    <string name="tag_films">Enable for movies</string>
+    <string name="tag_series">Enable for series</string>
     <string name="view_kino_review_tags_label_value">Tags</string>
-    <string name="review_edit_tags">Éditer les tags</string>
-    <string name="edit_tag_name_not_filled">Le nom du tag n\'est pas renseigné</string>
+    <string name="review_edit_tags">Edit tags</string>
+    <string name="edit_tag_name_not_filled">Please fill tag name</string>
+    <string name="delete_tag_dialog">Do you want to remove this tag ?</string>
 </resources>
