--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -127,6 +127,7 @@
 
     <string name="unknown_year">Rok wydania nieznany</string>
 
+    <string name="import_tags_status">Tags import:</string>
     <string name="import_movies_status">Movie reviews import:</string>
     <string name="import_series_status">Serie reviews import:</string>
     <string name="import_wishlist_series_status">Serie wishlist import:</string>
