--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -125,6 +125,7 @@
 
     <string name="unknown_year">Année inconnue</string>
 
+    <string name="import_tags_status">Import des tags:</string>
     <string name="import_movies_status">Import des avis de films:</string>
     <string name="import_series_status">Import des avis de séries:</string>
     <string name="import_wishlist_series_status">Import de la liste de souhaits des séries:</string>
