--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -152,4 +152,5 @@
     <string name="review_edit_tags">Éditer les tags</string>
     <string name="edit_tag_name_not_filled">Le nom du tag n\'est pas renseigné</string>
     <string name="delete_tag_dialog">Supprimer le tag ?</string>
+    <string name="import_parsing_line_error_missing_column_toast">A mandatory column is missing in an imported file</string>
 </resources>
