--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -81,7 +81,7 @@
     <string name="default_maximum_rating_dialog">Choisir la note maximale possible pour les prochains avis</string>
     <string name="general_preferences">Préférences générales</string>
     <string name="general_preferences_summary">Gérer les préférences générales de l\'application</string>
-    <string name="theme">Thème sombre</string>
+    <string name="theme">Forcer le thème sombre</string>
     <string name="change_theme">Thème modifié. Redémarrez l\'application pour que les changements soient totalement appliqués.</string>
 
     <string name="view_poster_review_layout_title">Avis</string>
