--- a/app/src/main/res/values-cn/strings.xml
+++ b/app/src/main/res/values-cn/strings.xml
@@ -156,4 +156,5 @@
     <string name="edit_tag_name_not_filled">没有指定标签的名称</string>
     <string name="delete_tag_dialog">你想删除此标签吗？</string>
     <string name="import_parsing_line_error_missing_column_toast">A mandatory column is missing in an imported file</string>
+    <string name="wishlist_cant_create_review">Error: can\'t create review</string>
 </resources>
