--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -154,4 +154,7 @@
     <string name="delete_tag_dialog">Do you want to remove this tag ?</string>
     <string name="import_parsing_line_error_missing_column_toast">A mandatory column is missing in an imported file</string>
     <string name="wishlist_cant_create_review">Error: can\'t create review</string>
+    <string name="go_back">Return</string>
+    <string name="validate">Validate</string>
+    <string name="no_tags_found_label">No tag found. Please verify enabled tags.</string>
 </resources>
